DatasetGraphMem2Fast supporting MRPlusSW. - using Java21 and virtual threads where it seemed appropriate
- renamed GraphWrapperTransactional2 to GraphMem2Txn
- fixed some threading and locking bugs in GraphMem2Txn
--> looks stable now